--- a/index.html
+++ b/index.html
@@ -5,3 +5,32 @@
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
+
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>CHERARA REDDAH</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Cherara Reddah!</h1>
+				</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:cherara.reddah@icloud.com">email</a></li>
+        		<li><a href="https://github.com/rcherara">github.com/rcherara</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
